--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.htdong</groupId>
     <artifactId>htdong</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
 
@@ -34,12 +34,12 @@
             <dependency>
                 <groupId>com.htdong</groupId>
                 <artifactId>core</artifactId>
-                <version>1.0.0</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.htdong</groupId>
                 <artifactId>dal</artifactId>
-                <version>1.0.0</version>
+                <version>${project.version}</version>
             </dependency>
             <!-- springboot -->
             <dependency>
