--- a/pom.xml
+++ b/pom.xml
@@ -50,4 +50,20 @@
             <!-- spring -->
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <finalName>htdong</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
