--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -20,5 +20,15 @@
             <groupId>com.htdong</groupId>
             <artifactId>client</artifactId>
         </dependency>
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <!-- javax -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
