--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 <artifactId>mybatis-spring</artifactId>
                 <version>2.0.6</version>
             </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.49</version>
+            </dependency>
             <!-- javax -->
             <dependency>
                 <groupId>jakarta.annotation</groupId>
