--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,23 @@
                 <artifactId>jakarta.annotation-api</artifactId>
                 <version>2.0.0</version>
             </dependency>
+            <!-- apache -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.9</version>
+            </dependency>
+            <!-- 日志 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.5</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>1.2.3</version>
+            </dependency>
             <!-- 其它 -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
