--- a/web/src/main/resources/application-daily.yml
+++ b/web/src/main/resources/application-daily.yml
@@ -1,2 +1,2 @@
-local.conf.file=/Users/dht31261/software/htdong-java/application.conf
-log.path=/Users/dht31261/gitsrc/htdong/htdong-java/log
+local.conf.file: /Users/dht31261/software/htdong-java/application.conf
+log.path: /Users/dht31261/gitsrc/htdong/htdong-java/log
