--- a/web/src/main/resources/application-online.yml
+++ b/web/src/main/resources/application-online.yml
@@ -1,2 +1,2 @@
-local.conf.file=/root/conf/application.conf
-log.path=/data/logs/htdong
+local.conf.file: /root/conf/application.conf
+log.path: /data/logs/htdong
