--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.14</version>
             </dependency>
+            <dependency>
+                <groupId>org.yaml</groupId>
+                <artifactId>snakeyaml</artifactId>
+                <version>1.30</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
