--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -32,6 +32,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+        </dependency>
         <!-- DB -->
         <dependency>
             <groupId>com.alibaba</groupId>
