--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -55,8 +55,8 @@
         </dependency>
         <!-- javax -->
         <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
         </dependency>
     </dependencies>
 </project>
