--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,9 @@
             </dependency>
             <!-- javax -->
             <dependency>
-                <groupId>jakarta.annotation</groupId>
-                <artifactId>jakarta.annotation-api</artifactId>
-                <version>2.0.0</version>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
             </dependency>
             <!-- apache -->
             <dependency>
