--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>client</module>
+        <module>common</module>
         <module>core</module>
         <module>dal</module>
         <module>web</module>
@@ -21,6 +22,7 @@
         <spring-version>5.3.19</spring-version>
         <jackson-version>2.13.2</jackson-version>
         <client-version>1.0.0-SNAPSHOT</client-version>
+        <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
     <dependencyManagement>
@@ -30,6 +32,11 @@
                 <groupId>com.htdong</groupId>
                 <artifactId>client</artifactId>
                 <version>${client-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.htdong</groupId>
+                <artifactId>common</artifactId>
+                <version>${common-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.htdong</groupId>
