--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>3.9</version>
             </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.15</version>
+            </dependency>
             <!-- 日志 -->
             <dependency>
                 <groupId>org.slf4j</groupId>
