--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
     </modules>
 
     <properties>
-        <spring-boot-version>2.6.6</spring-boot-version>
+        <spring-boot-version>2.6.7</spring-boot-version>
         <spring-version>5.3.20</spring-version>
-        <jackson-version>2.13.2</jackson-version>
+        <jackson-version>2.14.0</jackson-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
@@ -58,6 +58,11 @@
                         <artifactId>log4j-api</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>${spring-boot-version}</version>
             </dependency>
             <!-- spring -->
             <dependency>
@@ -138,7 +143,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-version}.2</version>
+                <version>${jackson-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -193,8 +198,7 @@
                 <version>3.8.1</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
         </plugins>
