--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
                 <artifactId>spring-jdbc</artifactId>
                 <version>${spring-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
             <!-- DB -->
             <dependency>
                 <groupId>com.alibaba</groupId>
