--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
-                <version>1.2.3</version>
+                <version>1.2.9</version>
             </dependency>
             <!-- jackson -->
             <dependency>
@@ -179,7 +179,12 @@
             <dependency>
                 <groupId>org.yaml</groupId>
                 <artifactId>snakeyaml</artifactId>
-                <version>1.30</version>
+                <version>1.32</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>3.21.7</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
