--- a/core/pom.xml
+++ b/core/pom.xml
@@ -14,7 +14,6 @@
     <name>htdong-core</name>
 
     <dependencies>
-        <!-- 子项目 -->
         <dependency>
             <groupId>com.htdong</groupId>
             <artifactId>client</artifactId>
@@ -30,6 +29,16 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-bom</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
         </dependency>
     </dependencies>
 </project>
