--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -1,4 +1,13 @@
+dubbo:
+  application:
+    name: htdong-java
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    address: zookeeper://127.0.0.1:2181
+
 server:
-   port: 9760
-   servlet:
-      context-path: /htdong
+  port: 9760
+  servlet:
+    context-path: /htdong
