--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
     </modules>
 
     <properties>
-        <spring-boot-version>2.6.7</spring-boot-version>
-        <spring-version>5.3.20</spring-version>
+        <spring-boot-version>2.7.8</spring-boot-version>
+        <spring-version>5.3.25</spring-version>
+        <tomcat-version>9.0.33</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
         <dubbo-version>3.2.0-beta.4</dubbo-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
@@ -65,6 +66,27 @@
                 <artifactId>spring-boot</artifactId>
                 <version>${spring-boot-version}</version>
             </dependency>
+            <!-- tomcat -->
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>${tomcat-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-el</artifactId>
+                <version>${tomcat-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-jasper</artifactId>
+                <version>${tomcat-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-websocket</artifactId>
+                <version>${tomcat-version}</version>
+            </dependency>
             <!-- spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -94,6 +116,16 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-expression</artifactId>
                 <version>${spring-version}</version>
             </dependency>
             <!-- DB -->
@@ -176,6 +208,7 @@
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-bom</artifactId>
                 <version>${dubbo-version}</version>
+                <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
