--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -2,7 +2,7 @@ dubbo:
   application:
     name: htdong-java
   protocol:
-    name: dubbo
+    name: triple
     port: -1
   registry:
     address: zookeeper://127.0.0.1:2181
