--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -16,8 +16,7 @@ dubbo:
     address: ${zookeeper.address}
   config-center:
     address: ${zookeeper.address}
-    group: htdong
-    app-config-file: /dubbo/config/htdong/htdong.properties
+#    app-config-file: /dubbo/config/htdong/htdong.properties
 
 server:
   port: 9760
