--- a/web/pom.xml
+++ b/web/pom.xml
@@ -43,6 +43,10 @@
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
