--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <spring-version>5.3.25</spring-version>
         <tomcat-version>9.0.69</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
-        <dubbo-version>3.2.0-beta.4</dubbo-version>
+        <dubbo-version>3.2.0-beta.5</dubbo-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
@@ -213,15 +213,9 @@
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-bom</artifactId>
-                <version>3.2.0-beta.4</version>
+                <version>${dubbo-version}</version>
                 <scope>import</scope>
                 <type>pom</type>
-                <exclusions>
-                    <exclusion>
-                        <groupId>io.netty</groupId>
-                        <artifactId>*</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
