--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <spring-version>5.3.25</spring-version>
         <tomcat-version>9.0.69</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
-        <dubbo-version>3.2.0-beta.5</dubbo-version>
+        <dubbo-version>3.1.6</dubbo-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
