--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -15,7 +15,8 @@ dubbo:
   registry:
     address: ${zookeeper.address}
   config-center:
-    address: ${zookeeper.address}
+    zookeeper:
+      address: ${zookeeper.address}
 
 server:
   port: 9760
