--- a/web/pom.xml
+++ b/web/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-dependencies-zookeeper</artifactId>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
