--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
                 <artifactId>spring-boot</artifactId>
                 <version>${spring-boot-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot-version}</version>
+            </dependency>
             <!-- tomcat -->
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
