--- a/pom.xml
+++ b/pom.xml
@@ -270,9 +270,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/*.xml</include>
-                    <include>*.yml</include>
-                    <include>*.properties</include>
+                    <include>**/*</include>
                 </includes>
                 <filtering>true</filtering>
             </resource>
