--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
     </modules>
 
     <properties>
-        <spring-boot-version>2.7.8</spring-boot-version>
-        <spring-version>5.3.26</spring-version>
+        <spring-boot-version>3.0.5</spring-boot-version>
+        <spring-version>6.0.8</spring-version>
+        <spring-cloud-version>4.0.0</spring-cloud-version>
         <tomcat-version>9.0.69</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
         <dubbo-version>3.1.6</dubbo-version>
@@ -71,7 +72,14 @@
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>${spring-boot-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-properties-migrator</artifactId>
+                <version>${spring-boot-version}</version>
+                <scope>runtime</scope>
+            </dependency>
             <!-- tomcat -->
+            <!--
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
@@ -92,6 +100,7 @@
                 <artifactId>tomcat-embed-websocket</artifactId>
                 <version>${tomcat-version}</version>
             </dependency>
+            -->
             <!-- spring -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -137,7 +146,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-zookeeper-config</artifactId>
-                <version>3.1.3</version>
+                <version>${spring-cloud-version}</version>
             </dependency>
             <!-- DB -->
             <dependency>
