--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <spring-cloud-version>4.0.0</spring-cloud-version>
         <tomcat-version>10.1.7</tomcat-version>
         <jackson-version>2.14.0</jackson-version>
-        <dubbo-version>3.2.0-beta.6</dubbo-version>
+        <dubbo-version>3.2.0</dubbo-version>
         <common-version>1.0.0-SNAPSHOT</common-version>
     </properties>
 
