--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -37,6 +37,9 @@ dubbo:
   protocol:
     name: tri
     port: -1
+#  provider:
+#    prefer-serialization: fastjson2
+#    serialization: fastjson2
   registry:
     address: zookeeper://${zookeeper.address}
 
