--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -37,6 +37,7 @@ dubbo:
   protocol:
     name: tri
     port: -1
+# 改成triple+protobuf
 #  provider:
 #    prefer-serialization: fastjson2
 #    serialization: fastjson2
