--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -37,6 +37,7 @@ dubbo:
   protocol:
     name: tri
     port: -1
+    serialization: protobuf
   registry:
     address: zookeeper://${zookeeper.address}
 
