--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
 	</modules>
 
 	<properties>
-	    <dubbo-version>3.2.0</dubbo-version>
+		<dubbo-version>3.2.0</dubbo-version>
 		<jackson-version>2.14.0</jackson-version>
+		<mybatis-plus-version>3.5.4.1</mybatis-plus-version>
 		<protobuf-version>3.25.0</protobuf-version>
 		<spring-boot-version>3.0.7</spring-boot-version>
 		<spring-version>6.0.8</spring-version>
@@ -162,12 +163,12 @@
 			<dependency>
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus</artifactId>
-				<version>3.5.3.1</version>
+				<version>${mybatis-plus-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus-annotation</artifactId>
-				<version>3.5.3.1</version>
+				<version>${mybatis-plus-version}</version>
 			</dependency>
 			<!-- jakarta -->
 			<dependency>
