--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,11 @@
 				<version>3.1.1-og</version>
 			</dependency>
 			<dependency>
+				<groupId>org.mybatis</groupId>
+				<artifactId>mybatis-spring</artifactId>
+				<version>3.0.3</version>
+			</dependency>
+			<dependency>
 				<groupId>com.baomidou</groupId>
 				<artifactId>mybatis-plus</artifactId>
 				<version>${mybatis-plus-version}</version>
