--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,14 @@
 	</modules>
 
 	<properties>
-		<dubbo-version>3.2.0</dubbo-version>
+		<dubbo-version>3.2.5</dubbo-version>
 		<jackson-version>2.14.0</jackson-version>
 		<mybatis-plus-version>3.5.5</mybatis-plus-version>
 		<protobuf-version>3.25.0</protobuf-version>
 		<spring-boot-version>3.2.2</spring-boot-version>
-		<spring-version>6.1.3</spring-version>
+		<spring-version>6.1.6</spring-version>
 		<spring-cloud-version>4.1.0</spring-cloud-version>
-		<tomcat-version>10.1.17</tomcat-version>
+		<tomcat-version>10.1.19</tomcat-version>
 		<common-version>1.0.0-SNAPSHOT</common-version>
 	</properties>
 
@@ -233,7 +233,7 @@
 			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-all</artifactId>
-				<version>4.1.100.Final</version>
+				<version>4.1.108.Final</version>
 			</dependency>
 			<!-- dubbo -->
 			<dependency>
@@ -278,9 +278,9 @@
 			</dependency>
 			<!-- 其它 -->
 			<dependency>
-				<groupId>com.alibaba.fastjson2</groupId>
-				<artifactId>fastjson2</artifactId>
-				<version>2.0.29</version>
+				<groupId>org.apache.zookeeper</groupId>
+				<artifactId>zookeeper</artifactId>
+				<version>3.9.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
