--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
       config:
         enabled: true
         root: config
+        defaultContext: application
         profileSeparator: '-'
   data:
     redis:
