--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,12 @@
 				<artifactId>mybatis-plus-annotation</artifactId>
 				<version>${mybatis-plus-version}</version>
 			</dependency>
+			<!-- shardingsphere
+			<dependency>
+				<groupId>org.apache.shardingsphere</groupId>
+				<artifactId>shardingsphere-jdbc-core</artifactId>
+				<version>5.4.2-SNAPSHOT</version>
+			</dependency> -->
 			<!-- jakarta -->
 			<dependency>
 				<groupId>jakarta.annotation</groupId>
