--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -16,12 +16,14 @@
 	<name>htdong-dal</name>
 
 	<dependencies>
-		<!-- 子项目 -->
 		<dependency>
 			<groupId>com.htdong</groupId>
 			<artifactId>client</artifactId>
 		</dependency>
-		<!-- spring -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -38,7 +40,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 		</dependency>
-		<!-- DB -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
@@ -55,13 +56,11 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
-		<!--
+		<!---->
 		<dependency>
 			<groupId>org.apache.shardingsphere</groupId>
-			<artifactId>shardingsphere-jdbc-core</artifactId>
+			<artifactId>shardingsphere-jdbc</artifactId>
 		</dependency>
-		-->
-		<!-- javax -->
 		<dependency>
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
