--- a/web/pom.xml
+++ b/web/pom.xml
@@ -18,6 +18,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.htdong</groupId>
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.htdong</groupId>
 			<artifactId>client</artifactId>
 		</dependency>
 		<dependency>
