--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
+					<compilerArgs>
+	                    <arg>-parameters</arg>
+	                </compilerArgs>
+	                <parameters>true</parameters>
 					<encoding>UTF-8</encoding>
 					<release>21</release>
 				</configuration>
