--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
       enabled: false
     zookeeper:
       connect-string: ${zookeeper.address}
+      discovery:
+        register: true
       config:
         enabled: true
         root: config
