注册http端口到zk

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
     zookeeper:
       connect-string: ${zookeeper.address}
       discovery:
+        enabled: true
         register: true
       config:
         enabled: true
